# cpp-demo

./: .gitignore  README.md
alignment/: main.cpp
asm/: main.cpp  makefile
badalloc/: main.cpp
binding/: StructBinding.cpp
binsh/: a.c  a.sh  b.bash
cmake-macro/: BM.cpp  CMakeLists.txt  MA.cpp  USE_BM.cmake  USE_MA.cmake  main.cpp
construct/: main.cpp
count-int-digit/: main.cpp
curl_tls/: Makefile  main.cpp  run.sh
enum-filer/: main.cpp
fgets/: main.cpp
fork-exec/: main.cpp
ftrace-hook/: README.md
gstreamer/: FileUtils.cpp  FileUtils.hpp  ICapture.hpp  Log.hpp  Makefile  RTPCapture.cpp  RTPCapture.hpp  main.cpp
headers-ut/: README.md  xmake.lua
lifecycle/: main.cpp
mem-log/: Makefile  main.cpp
memory-order/: main.cpp  test
migration/: rt-migrate-test1.c  rt-migrate-test2.c  rt-migrate-test3.c
mutex/: main.cpp
ntp/: main.cpp
observer/: Observeable.hpp
output-char/: main.cpp
popen-lock/: main.cpp
prevent-dir-traversal/: Makefile  demo  main.cpp
ref/: main.cpp
regex/: main.cpp
replace-str/: main.cpp
single-instance/: MyClass.cpp  SingletonImpl.hpp
stack-protection/: Makefile  main.cpp
string/: main.cpp
sys-mutux/: main.cpp
syscall-hook/: Makefile  direct_syscall_hook.h  resolve_kallsyms.h  set_page_flags.h  syscall_hook.c
thread-nice/: main.cpp
thread-stat/: Makefile  main.cpp
uinput/: main.cpp
unused/: main.cpp
v4l-egl/: 0001-REM-support-dma-buff.patch  Makefile  camera.c  camera.h  config.h  convert.c  convert.h  main.c  wayland.c  wayland.h
vector/: main.cpp  test
verification/: main.cpp
(+20 files in other folders)
